fix dark mode on package page

--- a/styles/index.css
+++ b/styles/index.css
@@ -13,4 +13,8 @@ body {
   @apply hidden;
 }
 
+.prose * {
+  @apply dark:text-white;
+}
+
 @tailwind utilities;
